16.2.3